--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Phoenix ULS Portal</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Add Babel for JSX and TS transpilation -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="importmap">
 {
   "imports": {
@@ -18,6 +20,7 @@
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <!-- Change script type to text/babel to let Babel transpile it -->
+    <script type="text/babel" data-type="module" src="/index.tsx"></script>
   </body>
 </html>
