--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Phoenix ULS Portal</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Add Babel for JSX and TS transpilation -->
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <!-- Babel script removed -->
   <script type="importmap">
 {
   "imports": {
@@ -19,7 +18,7 @@
 </head>
   <body>
     <div id="root"></div>
-    <!-- Change script type to text/babel to let Babel transpile it -->
-    <script type="text/babel" data-type="module" src="./index.tsx"></script>
+    <!-- Script type changed to "module" to be natively handled by the browser -->
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
